[tool.poetry]
name = "bga-course"
version = "0.1.0"
description = ""
authors = ["lhaze <lhaze@lhaze.name>"]
readme = "README.md"
packages = [{include = "bga_course"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
pandas = "^1.5.3"
bokeh = "^3.0.3"
seaborn = "^0.12.2"
jupyterlab = "^3.6.1"
jupyter = "^1.0.0"
docmodel = "^0.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
